<resources>
    <string name="app_name">My Weather is it</string>
    <string name="city_name">City Name</string>
    <string name="temperature">22</string>
    <string name="day">Sunday</string>
    <string name="day_month">22/05</string>
    <string name="more_detail">More Details ➡</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
</resources>